--- a/EPex_Mobile_2/EPex_Mobile_2/Base.lproj/Main.storyboard
+++ b/EPex_Mobile_2/EPex_Mobile_2/Base.lproj/Main.storyboard
@@ -62,7 +62,7 @@
                                 <items>
                                     <barButtonItem title="Home" id="apk-iF-6hy">
                                         <connections>
-                                            <segue destination="Oh5-WG-lSL" kind="showDetail" id="zVi-Qt-tjs"/>
+                                            <action selector="buttonHome:" destination="GID-IA-m7S" id="ncj-eC-Cwe"/>
                                         </connections>
                                     </barButtonItem>
                                 </items>
@@ -85,9 +85,11 @@
                     </view>
                     <connections>
                         <outlet property="table" destination="CM2-vK-lUJ" id="H76-Kb-SCL"/>
+                        <segue destination="orD-Ju-e5B" kind="unwind" identifier="segueToSplashScreenVCFromSavedProjectsVC" unwindAction="unwindToSplashScreenVCWithSegue:" id="Hsl-qV-q1o"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="OqR-Ua-Enn" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="orD-Ju-e5B" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="1192.5" y="34.859154929577464"/>
         </scene>
@@ -113,7 +115,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="YY" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="PHa-Ee-tkJ">
-                                <rect key="frame" x="252.5" y="410" width="38.5" height="30"/>
+                                <rect key="frame" x="254.5" y="410" width="43.5" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" name="GEInspira" family="GE Inspira" pointSize="17"/>
                                 <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
@@ -122,7 +124,7 @@
                                 </connections>
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="DD" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="sqm-si-muf">
-                                <rect key="frame" x="190.5" y="410" width="43" height="30"/>
+                                <rect key="frame" x="190.5" y="410" width="45" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="1E5-d5-ouR"/>
                                 </constraints>
@@ -134,7 +136,7 @@
                                 </connections>
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="MM" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cI0-1P-H1W">
-                                <rect key="frame" x="121.5" y="410" width="47" height="30"/>
+                                <rect key="frame" x="117.5" y="410" width="51" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" name="GEInspira" family="GE Inspira" pointSize="17"/>
                                 <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
@@ -153,7 +155,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=":" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v4y-pT-Jo1">
-                                <rect key="frame" x="84.5" y="410" width="23" height="30"/>
+                                <rect key="frame" x="80.5" y="410" width="23" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="23" id="8hw-wD-Lj3"/>
                                     <constraint firstAttribute="height" constant="30" id="RbD-j7-aAx"/>
@@ -163,7 +165,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Task #" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="FSt-PH-rBu">
-                                <rect key="frame" x="17" y="410" width="67.5" height="30"/>
+                                <rect key="frame" x="10.5" y="410" width="70" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" name="GEInspira" family="GE Inspira" pointSize="17"/>
                                 <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
@@ -212,7 +214,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="/" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kgk-6u-bXz">
-                                <rect key="frame" x="231.5" y="410" width="23" height="30"/>
+                                <rect key="frame" x="233.5" y="410" width="23" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="ZjD-7N-kuy"/>
                                     <constraint firstAttribute="width" constant="23" id="nV0-2e-JNR"/>
@@ -286,7 +288,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="by Natalie Alvarez" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gNv-EM-0DZ">
-                                <rect key="frame" x="76.5" y="299.5" width="167.5" height="26"/>
+                                <rect key="frame" x="72.5" y="299.5" width="176" height="26"/>
                                 <fontDescription key="fontDescription" name="GEInspira" family="GE Inspira" pointSize="22"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -299,13 +301,13 @@
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="EPex Mobile" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t75-eP-Cf0">
-                                <rect key="frame" x="65" y="251.5" width="190.5" height="45"/>
+                                <rect key="frame" x="53.5" y="251.5" width="213.5" height="45"/>
                                 <fontDescription key="fontDescription" name="GEInspira" family="GE Inspira" pointSize="38"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ycB-2w-ubU">
-                                <rect key="frame" x="79" y="416.5" width="162" height="36"/>
+                                <rect key="frame" x="71.5" y="416.5" width="177" height="36"/>
                                 <fontDescription key="fontDescription" name="GEInspira" family="GE Inspira" pointSize="20"/>
                                 <state key="normal" title="Search For Projects">
                                     <color key="titleColor" red="0.0" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -315,7 +317,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5gr-dX-gRE">
-                                <rect key="frame" x="98" y="372.5" width="124" height="36"/>
+                                <rect key="frame" x="92.5" y="372.5" width="135" height="36"/>
                                 <fontDescription key="fontDescription" name="GEInspira" family="GE Inspira" pointSize="20"/>
                                 <state key="normal" title="Saved Projects">
                                     <color key="titleColor" red="0.0" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -371,7 +373,7 @@
                                 <items>
                                     <barButtonItem title="Home" id="kPp-Qa-7BC">
                                         <connections>
-                                            <segue destination="Oh5-WG-lSL" kind="showDetail" id="W2B-gH-xl1"/>
+                                            <action selector="buttonHome2:" destination="My6-jN-LYI" id="VJ6-7s-GdT"/>
                                         </connections>
                                     </barButtonItem>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="tOp-zS-hlp"/>
@@ -389,7 +391,7 @@
                                 <fontDescription key="fontDescription" name="GEInspira" family="GE Inspira" pointSize="17"/>
                                 <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                                 <connections>
-                                    <outlet property="delegate" destination="My6-jN-LYI" id="tKV-6t-CF1"/>
+                                    <outlet property="delegate" destination="My6-jN-LYI" id="y1Y-Iv-JFI"/>
                                 </connections>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Type in owner name, Project ID, and Product Line and hit &quot;Search&quot;:" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gwd-Ij-bl1">
@@ -460,16 +462,18 @@
                     <connections>
                         <outlet property="ownerNameLabel" destination="DOI-oD-1X5" id="TwP-yg-9aj"/>
                         <outlet property="projectIDLabel" destination="wpT-8z-ZEH" id="yEF-jY-j7s"/>
+                        <segue destination="SSu-bH-CmV" kind="unwind" identifier="segueToSplashScreenVCFromSearchVC" unwindAction="unwindToSplashScreenVCWithSegue:" id="deA-ng-nEm"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RbZ-QF-DBw" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="SSu-bH-CmV" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="1192.5" y="794.36619718309862"/>
         </scene>
         <!--Search Results View Controller-->
         <scene sceneID="re7-Vh-hzg">
             <objects>
-                <viewController id="7lM-6Y-YUg" customClass="SearchResultsViewController" customModule="EPex_Mobile_2" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="MyStoryBoard" id="7lM-6Y-YUg" customClass="SearchResultsViewController" customModule="EPex_Mobile_2" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Ubb-8C-eb3"/>
                         <viewControllerLayoutGuide type="bottom" id="XMq-9I-2jO"/>
@@ -540,7 +544,7 @@
                                 <items>
                                     <barButtonItem title="Search Again" id="cLg-AF-aHG">
                                         <connections>
-                                            <segue destination="My6-jN-LYI" kind="show" id="991-ed-cAz"/>
+                                            <action selector="buttonSearchAgain:" destination="7lM-6Y-YUg" id="LB3-mC-ym2"/>
                                         </connections>
                                     </barButtonItem>
                                 </items>
@@ -601,9 +605,11 @@
                     </view>
                     <connections>
                         <outlet property="table3" destination="7Xi-q3-N2a" id="jrR-Nm-ZOu"/>
+                        <segue destination="gQn-aN-lJS" kind="unwind" identifier="segueToSearchVC" unwindAction="unwindToSearchVCWithSegue:" id="fof-YW-SVd"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ocr-sZ-yCf" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="gQn-aN-lJS" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="2403.75" y="793.30985915492954"/>
         </scene>
@@ -643,7 +649,7 @@
                                 <items>
                                     <barButtonItem title="Back To Projects" id="Bjh-tF-CcO">
                                         <connections>
-                                            <segue destination="GID-IA-m7S" kind="show" id="vEo-KA-kLO"/>
+                                            <action selector="buttonBackToProjects:" destination="je7-0p-otn" id="y7T-fr-YGS"/>
                                         </connections>
                                     </barButtonItem>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="w0u-XA-qPA"/>
@@ -699,9 +705,11 @@
                     </view>
                     <connections>
                         <outlet property="table2" destination="JXk-ms-5NE" id="Fu5-lM-eok"/>
+                        <segue destination="ar9-Im-e6G" kind="unwind" identifier="segueToSavedProjectsVC" unwindAction="unwindToSavedProjectsVCWithSegue:" id="ziO-JC-b1U"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aWV-Th-twc" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="ar9-Im-e6G" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="2859.375" y="26.408450704225352"/>
         </scene>
@@ -709,9 +717,4 @@
     <resources>
         <image name="General_Electric_logo.svg.png" width="1024" height="1024"/>
     </resources>
-    <inferredMetricsTieBreakers>
-        <segue reference="W2B-gH-xl1"/>
-        <segue reference="991-ed-cAz"/>
-        <segue reference="vEo-KA-kLO"/>
-    </inferredMetricsTieBreakers>
 </document>
