changed picker default point

--- a/EPex_Mobile_2/EPex_Mobile_2/Base.lproj/Main.storyboard
+++ b/EPex_Mobile_2/EPex_Mobile_2/Base.lproj/Main.storyboard
@@ -248,16 +248,10 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <pickerView contentMode="scaleToFill" verticalCompressionResistancePriority="749" translatesAutoresizingMaskIntoConstraints="NO" id="THJ-fu-tIj">
-                                <rect key="frame" x="16" y="249" width="343" height="374"/>
-                                <connections>
-                                    <outlet property="dataSource" destination="My6-jN-LYI" id="0pB-oM-MCG"/>
-                                    <outlet property="delegate" destination="My6-jN-LYI" id="0AX-dv-ngP"/>
-                                </connections>
-                            </pickerView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Product Line:" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lzQ-AI-D1u">
-                                <rect key="frame" x="16" y="234.5" width="343" height="27"/>
+                                <rect key="frame" x="16" y="253" width="343" height="27"/>
                                 <constraints>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="27" id="1m9-xK-lzA"/>
                                     <constraint firstAttribute="height" constant="27" id="FGv-vZ-csY"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="GEInspira" family="GE Inspira" pointSize="23"/>
@@ -271,7 +265,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Project ID" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wpT-8z-ZEH">
-                                <rect key="frame" x="16" y="159.5" width="343" height="30"/>
+                                <rect key="frame" x="16" y="170" width="343" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="smO-ox-2yN"/>
                                 </constraints>
@@ -303,7 +297,7 @@
                                 </items>
                             </toolbar>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Owner Name" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DOI-oD-1X5">
-                                <rect key="frame" x="16" y="105.5" width="343" height="30"/>
+                                <rect key="frame" x="16" y="116" width="343" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="iqb-Iy-3Kp"/>
                                 </constraints>
@@ -314,6 +308,13 @@
                                     <outlet property="delegate" destination="My6-jN-LYI" id="NiD-cG-CEF"/>
                                 </connections>
                             </textField>
+                            <pickerView contentMode="scaleToFill" verticalCompressionResistancePriority="749" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="THJ-fu-tIj">
+                                <rect key="frame" x="16" y="286" width="343" height="320"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="My6-jN-LYI" id="0pB-oM-MCG"/>
+                                    <outlet property="delegate" destination="My6-jN-LYI" id="0AX-dv-ngP"/>
+                                </connections>
+                            </pickerView>
                         </subviews>
                         <color key="backgroundColor" red="0.074882440270000003" green="0.71863442659999999" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
@@ -323,7 +324,6 @@
                             <constraint firstItem="THJ-fu-tIj" firstAttribute="trailing" secondItem="EwE-7c-L6S" secondAttribute="trailingMargin" id="4hd-Eo-HZO"/>
                             <constraint firstAttribute="trailing" secondItem="Xbm-OS-N5b" secondAttribute="trailing" id="5fo-3c-7sT"/>
                             <constraint firstItem="tyS-8f-iQI" firstAttribute="top" secondItem="Xbm-OS-N5b" secondAttribute="bottom" id="7Pn-kh-Y2Q"/>
-                            <constraint firstItem="lzQ-AI-D1u" firstAttribute="top" secondItem="wpT-8z-ZEH" secondAttribute="bottom" constant="45" id="7yF-b3-IiO"/>
                             <constraint firstItem="DOI-oD-1X5" firstAttribute="trailing" secondItem="EwE-7c-L6S" secondAttribute="trailingMargin" id="89y-XU-om1"/>
                             <constraint firstItem="Gf5-i3-M0e" firstAttribute="centerX" secondItem="EwE-7c-L6S" secondAttribute="centerX" id="8TG-RB-Wqj"/>
                             <constraint firstItem="lzQ-AI-D1u" firstAttribute="leading" secondItem="EwE-7c-L6S" secondAttribute="leadingMargin" id="913-nL-KDn"/>
@@ -335,9 +335,9 @@
                             <constraint firstItem="Gf5-i3-M0e" firstAttribute="centerX" secondItem="EwE-7c-L6S" secondAttribute="centerX" id="IlI-gd-nVJ"/>
                             <constraint firstAttribute="trailing" secondItem="Xbm-OS-N5b" secondAttribute="trailing" id="Kw2-1g-nzi"/>
                             <constraint firstAttribute="trailing" secondItem="Xbm-OS-N5b" secondAttribute="trailing" id="O4n-Sk-jeB"/>
-                            <constraint firstItem="THJ-fu-tIj" firstAttribute="top" secondItem="lzQ-AI-D1u" secondAttribute="bottom" constant="-12.5" id="Oq2-in-Zzc"/>
                             <constraint firstItem="Gf5-i3-M0e" firstAttribute="leading" secondItem="EwE-7c-L6S" secondAttribute="leadingMargin" id="QHX-kX-IWV"/>
                             <constraint firstItem="lzQ-AI-D1u" firstAttribute="centerX" secondItem="EwE-7c-L6S" secondAttribute="centerX" id="QYr-FY-WJC"/>
+                            <constraint firstItem="DOI-oD-1X5" firstAttribute="top" secondItem="Gf5-i3-M0e" secondAttribute="bottom" constant="46.5" id="RhP-Jk-Xdh"/>
                             <constraint firstItem="THJ-fu-tIj" firstAttribute="centerX" secondItem="EwE-7c-L6S" secondAttribute="centerX" id="Sln-F1-vRH"/>
                             <constraint firstItem="Xbm-OS-N5b" firstAttribute="leading" secondItem="EwE-7c-L6S" secondAttribute="leading" id="TyB-aG-k2j"/>
                             <constraint firstItem="Xbm-OS-N5b" firstAttribute="leading" secondItem="EwE-7c-L6S" secondAttribute="leading" id="Vj5-Uh-Li8"/>
@@ -348,10 +348,11 @@
                             <constraint firstItem="DOI-oD-1X5" firstAttribute="leading" secondItem="EwE-7c-L6S" secondAttribute="leadingMargin" id="a7O-JP-o4t"/>
                             <constraint firstItem="Gf5-i3-M0e" firstAttribute="trailing" secondItem="EwE-7c-L6S" secondAttribute="trailingMargin" id="asI-rS-wnb"/>
                             <constraint firstItem="Gf5-i3-M0e" firstAttribute="top" secondItem="q9F-fQ-j6Y" secondAttribute="bottom" constant="14" id="bIF-H3-ObM"/>
-                            <constraint firstItem="DOI-oD-1X5" firstAttribute="top" secondItem="Gf5-i3-M0e" secondAttribute="bottom" constant="36" id="bK5-6W-OxR"/>
                             <constraint firstAttribute="trailingMargin" secondItem="wpT-8z-ZEH" secondAttribute="trailing" id="g8O-9c-8jY"/>
                             <constraint firstItem="DOI-oD-1X5" firstAttribute="trailing" secondItem="EwE-7c-L6S" secondAttribute="trailingMargin" id="hJ5-Hy-OKm"/>
                             <constraint firstItem="wpT-8z-ZEH" firstAttribute="centerX" secondItem="EwE-7c-L6S" secondAttribute="centerX" id="ica-l1-OgZ"/>
+                            <constraint firstItem="THJ-fu-tIj" firstAttribute="top" secondItem="lzQ-AI-D1u" secondAttribute="bottom" constant="-13" id="p0Y-5a-5zc"/>
+                            <constraint firstItem="lzQ-AI-D1u" firstAttribute="top" secondItem="wpT-8z-ZEH" secondAttribute="bottom" constant="53" id="pkW-uF-43L"/>
                             <constraint firstItem="Gf5-i3-M0e" firstAttribute="trailing" secondItem="EwE-7c-L6S" secondAttribute="trailingMargin" id="wun-Pw-wKb"/>
                         </constraints>
                     </view>
@@ -816,17 +817,8 @@
                                     <outlet property="delegate" destination="cHe-Hu-Gaz" id="xQl-6H-J02"/>
                                 </connections>
                             </pickerView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Product Line:" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Lq-kX-PSW">
-                                <rect key="frame" x="16" y="234" width="343" height="27"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="27" id="6nc-zv-DVj"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name="GEInspira" family="GE Inspira" pointSize="23"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="For Landscape!!!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fqf-8l-FAy">
-                                <rect key="frame" x="16" y="34" width="343" height="36"/>
+                                <rect key="frame" x="16" y="34" width="343" height="35.5"/>
                                 <fontDescription key="fontDescription" name="GEInspira" family="GE Inspira" pointSize="30"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -874,6 +866,15 @@
                                     <outlet property="delegate" destination="cHe-Hu-Gaz" id="rwU-IK-eh4"/>
                                 </connections>
                             </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Product Line:" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Lq-kX-PSW">
+                                <rect key="frame" x="16" y="266" width="343" height="27"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="27" id="6nc-zv-DVj"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="GEInspira" family="GE Inspira" pointSize="23"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="0.074882440270000003" green="0.71863442659999999" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
@@ -881,8 +882,8 @@
                             <constraint firstItem="XyK-VV-oQr" firstAttribute="leading" secondItem="6UM-tY-Og2" secondAttribute="leading" id="2Qa-ig-ks2"/>
                             <constraint firstItem="fqf-8l-FAy" firstAttribute="centerX" secondItem="6UM-tY-Og2" secondAttribute="centerX" id="8bn-cn-ENl"/>
                             <constraint firstItem="5Lq-kX-PSW" firstAttribute="centerX" secondItem="6UM-tY-Og2" secondAttribute="centerX" id="B5v-Ss-cFQ"/>
-                            <constraint firstItem="5Lq-kX-PSW" firstAttribute="top" secondItem="23z-wB-yko" secondAttribute="bottom" constant="27.5" id="Cvy-Fl-bij"/>
                             <constraint firstAttribute="trailingMargin" secondItem="5Lq-kX-PSW" secondAttribute="trailing" id="E4X-ki-y3V"/>
+                            <constraint firstItem="85Q-1O-U1I" firstAttribute="top" secondItem="5Lq-kX-PSW" secondAttribute="bottom" constant="-14" id="FkV-if-zGu"/>
                             <constraint firstAttribute="trailing" secondItem="XyK-VV-oQr" secondAttribute="trailing" id="GRX-rW-5h7"/>
                             <constraint firstItem="XyK-VV-oQr" firstAttribute="leading" secondItem="6UM-tY-Og2" secondAttribute="leading" id="MFh-dL-UEq"/>
                             <constraint firstItem="85Q-1O-U1I" firstAttribute="centerX" secondItem="6UM-tY-Og2" secondAttribute="centerX" id="MH5-U7-1QF"/>
@@ -893,12 +894,14 @@
                             <constraint firstItem="85Q-1O-U1I" firstAttribute="top" secondItem="5Lq-kX-PSW" secondAttribute="bottom" constant="-12.5" id="R1W-Zb-mhw"/>
                             <constraint firstItem="pQ9-lC-aNV" firstAttribute="top" secondItem="XyK-VV-oQr" secondAttribute="bottom" id="Rc3-ke-6IW"/>
                             <constraint firstAttribute="trailing" secondItem="XyK-VV-oQr" secondAttribute="trailing" id="Rd4-bJ-k5U"/>
+                            <constraint firstItem="5Lq-kX-PSW" firstAttribute="centerY" secondItem="6UM-tY-Og2" secondAttribute="centerY" id="SPH-ZS-p0x"/>
                             <constraint firstItem="85Q-1O-U1I" firstAttribute="trailing" secondItem="6UM-tY-Og2" secondAttribute="trailingMargin" id="Sti-ZS-WTA"/>
                             <constraint firstItem="85Q-1O-U1I" firstAttribute="leading" secondItem="6UM-tY-Og2" secondAttribute="leadingMargin" id="UJf-Mn-4lF"/>
                             <constraint firstItem="JXY-6B-SbD" firstAttribute="centerX" secondItem="6UM-tY-Og2" secondAttribute="centerX" id="cdz-BR-rhY"/>
                             <constraint firstItem="fqf-8l-FAy" firstAttribute="leading" secondItem="6UM-tY-Og2" secondAttribute="leadingMargin" id="dN5-yL-kQY"/>
                             <constraint firstItem="5Lq-kX-PSW" firstAttribute="leading" secondItem="6UM-tY-Og2" secondAttribute="leadingMargin" id="dpB-W4-Tnm"/>
                             <constraint firstItem="JXY-6B-SbD" firstAttribute="trailing" secondItem="6UM-tY-Og2" secondAttribute="trailingMargin" id="gJB-uq-nIK"/>
+                            <constraint firstItem="5Lq-kX-PSW" firstAttribute="centerX" secondItem="6UM-tY-Og2" secondAttribute="centerX" id="gPq-RD-oij"/>
                             <constraint firstItem="fqf-8l-FAy" firstAttribute="trailing" secondItem="6UM-tY-Og2" secondAttribute="trailingMargin" id="gUg-xm-4Gb"/>
                             <constraint firstItem="fqf-8l-FAy" firstAttribute="trailing" secondItem="6UM-tY-Og2" secondAttribute="trailingMargin" id="gWi-Gt-IEW"/>
                             <constraint firstItem="23z-wB-yko" firstAttribute="centerX" secondItem="6UM-tY-Og2" secondAttribute="centerX" id="gum-4e-DU8"/>
